...
        ) {
            items(items = list) { item ->
                CastMember(
                    name = item.name,
                    role = item.character,
                    originalImageUrl = item.originalImageUrl,
                    modifier = Modifier.padding(16.dp).testTag("cast_list_item"),
                    onClick = { onClick(item) }
                )
            }
        }
    }
}
...
