...
    <string name="title_yesterday_shows">Aired Yesterday</string>
    <string name="title_today_shows">Airing Today</string>
    <string name="title_tomorrow_shows">Airing Tomorrow</string>
    <string name="title_explore">Explore</string>
    <string name="title_seasons">Seasons</string>
    <string name="title_season_episodes">Episodes</string>
    <string name="title_settings">Settings</string>
    <string name="title_recommendations">Recommendations</string>
    <string name="title_trakt_account">Trakt Account</string>
    <string name="title_favorites_list">Your Watchlist</string>
    <string name="watchlist_description">Shows you intend to watch. Tap to view, swipe to remove.\nNote: Trakt automatically removes items from your watchlist once you log an episode as watched.</string>
    <string name="title_loading">Loading</string>
    <string name="title_unknown">Title Unknown</string>
...
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="scroll_to_top">Scroll to top</string>
    <string name="title_episode_detail">Episode Details</string>
    <string name="back_arrow_content_description">Back</string>
    <string name="error_fetching_episode_details">Failed to load episode details.</string>
    <string name="no_overview_available">No overview available for this episode.</string>
    <string name="settings_general">General</string>
    <string name="settings_episode_notifications">Episode Notifications</string>
    <string name="settings_episode_notifications_desc">Get alerted when tracked shows air locally</string>
    <string name="settings_app_theme">App Theme</string>
    <string name="settings_theme_selected">Selected</string>
    <string name="settings_data_saver">Data Saver Mode</string>
    <string name="settings_data_saver_desc">Limit image quality to save bandwidth</string>
...
    <string name="person_detail_show_less">Show less</string>
    <string name="person_detail_read_more">Read more</string>
    <string name="person_detail_known_for">Known for %1$s</string>
    <string name="person_detail_age">Age %1$s</string>
    <string name="person_detail_photos">Photos</string>
    <string name="person_detail_filmography">Filmography</string>
    <string name="person_detail_navigate_back">Navigate back</string>
    <string name="person_detail_image_content_description">Person Image</string>
    <string name="person_detail_photo_content_description">Person Photo</string>
    <string name="person_detail_close_gallery">Close Gallery</string>
    <string name="status_returning_series">Returning Series</string>
    <string name="status_in_production">In Production</string>
    <string name="status_planned">Planned</string>
...
